--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 		margin: 0;
 		padding: 0;
-		height: 100%;
+		height: 95%%;
 		width: 100%;
 	}
 	#location {
@@ -50,6 +50,7 @@
 		<div id="mapContainter">
 			<div id="map"></div>
 		</div>
+		<p class="love">Made with <i class="icon ion-heart"></i> by Tim Ferguson</p>
 	</div>
 	<script>
 	var globalData;
