--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </head>
 <body>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<script type="text/css" src = "http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"></script>
+	<script type="text/css" src = "https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"></script>
 	<div style="height:100%; width:100%;">
 		<div id="divabove" style="width:100%">
 			<select id="location" style="position:absolute;" onChange="setCenter();">
