--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		height: 100%%;
 		width: 100%;
 	}
-	#location {
+	#location, #love {
 		z-index: 5;
 		margin-left: auto;
 		margin-right: auto;
@@ -52,7 +52,7 @@
 		<div id="mapContainter">
 			<div id="map"></div>
 		</div>
-		<p class="love">Made with <i class="icon ion-heart"></i> by Tim Ferguson</p>
+		<p id="love" style="position:absolute;" class="love">Made with <i class="icon ion-heart"></i> by Tim Ferguson</p>
 	</div>
 	<script>
 	var globalData;
