--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		width: 30%;
 	}
 	#love {
-		position:absolute;
+		position:relative;
 		z-index: 5;
 		margin-left: auto;
 		margin-right: auto;
