--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 		</div>
 		<div id="mapContainter">
 			<div id="map"></div>
-			<p id="love" class="love">Made with <i class="icon ion-heart"></i> by Tim Ferguson</p>
+			<p id="love" class="love">Made with <i class="icon ion-heart"></i> by <a href="https://www.linkedin.com/in/tim-ferguson-01451892/">Tim Ferguson</a></p>
 		</div>
 	</div>
 	<script>
