--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
 		</div>
 	</div>
 	<script>
+	/*
+		If you've come to peek at the code, please know I threw this together very quickly. There are small bits of unused code and the coding practices aren't the best - this is just a hobby project I thought I'd share - Stay tuned and I will be updating it over the coming weeks, and cleaning up my code base. 
+	*/
 	var globalData;
 	var labels;
 	var map;
